fix alignment with animations

--- a/src/Components/Main/styles.scss
+++ b/src/Components/Main/styles.scss
@@ -12,11 +12,10 @@
 }
 
 .sparkle {
-  width: 148px;
+  height: 148px;
   position: relative;
   right: 12px;
   top: 24px;
-  rotate: 90deg;
 }
 
 .animateNone {
@@ -25,6 +24,7 @@
 
 .animateSparkle {
   opacity: 0;
+  width: 0;
   animation: showSparkle 0.4s ease 20.5s 1;
   animation-fill-mode: forwards;
 }
@@ -32,8 +32,11 @@
 @keyframes showSparkle {
   0% {
     opacity: 0;
+    width: auto;
   }
   100% {
+    width: auto;
+    display: block;
     opacity: 1;
     visibility: visible;
   }
